@@ -22,7 +22,7 @@ public class OS {
 	}
 	
 	public static void hackBrokenDevices() {
-       if (Build.PRODUCT.contains("morrison") || Build.PRODUCT.contains("voles") || Build.PRODUCT.contains("umts_sholes")) {
+       if (Build.PRODUCT.contains("morrison") || Build.PRODUCT.contains("voles") || Build.PRODUCT.contains("umts_sholes" || Build.PRODUCT.contains("sdk")) {
     	   Graphics.setSupportsVBO(false);
        }
    }
